Book tests + name refactoring + Seeder + Test startup config + refactoring of program.cs in api to make testing easier
